# jk2mv

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt
src/client/: FxPrimitives.cpp  FxScheduler.cpp  FxSystem.h  cl_avi.cpp  cl_cgame.cpp  cl_cin.cpp  cl_console.cpp  cl_main.cpp  cl_parse.cpp  cl_scrn.cpp  cl_ui.cpp  client.h  snd_dma.cpp  snd_local.h  snd_public.h
src/game/: surfaceflags.h
src/ghoul2/: G2_local.h
src/qcommon/: common.cpp  files.cpp  q_math.cpp  q_shared.cpp  q_shared.h  qcommon.h  qfiles.h  sstring.h  tags.h  vm.cpp
src/rd-common/: tr_common.h  tr_font.cpp  tr_font.h  tr_image_jpg.cpp  tr_image_load.cpp  tr_image_png.cpp  tr_image_tga.cpp  tr_language.h  tr_noise.cpp  tr_public.h  tr_types.h
src/rd-vulkan/: CMakeLists.txt  G2_API.cpp  G2_bolts.cpp  G2_bones.cpp  G2_misc.cpp  G2_surfaces.cpp  tr_WorldEffects.cpp  tr_WorldEffects.h  tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_decals.cpp  tr_ghoul2.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_marks.cpp  tr_mesh.cpp  tr_model.cpp  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_skin.cpp  tr_sky.cpp  tr_subs.cpp  tr_surfacesprites.cpp  tr_world.cpp  vk_frame.cpp  vk_image.cpp  vk_image_process.cpp  vk_info.cpp  vk_init.cpp  vk_instance.cpp  vk_local.h  vk_pipelines.cpp  vk_shade_geometry.cpp  vk_shaders.cpp  (+3 more)
src/rd-vulkan/shaders/: compile_threaded.bat
src/rd-vulkan/shaders/glsl/: fog_frag.tmpl  gen_frag.tmpl  surface_sprite_frag.tmpl  surface_sprite_vert.tmpl
src/renderer/: G2_API.cpp  G2_bolts.cpp  G2_bones.cpp  G2_misc.cpp  G2_surfaces.cpp  tr_ghoul2.cpp  tr_init.cpp  tr_local.h  tr_scene.cpp  tr_shader.cpp
src/sdl/: sdl_window.cpp
src/server/: server.h  sv_game.cpp  sv_init.cpp  sv_world.cpp
src/sys/: sys_loadlib.h  sys_main.cpp  sys_public.h  sys_unix.cpp  sys_win32.cpp
